Bug 243679 - [macOS] Reject getDisplayMedia prompt if system picker times out
Summary: [macOS] Reject getDisplayMedia prompt if system picker times out
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-08-08 12:04 PDT by Eric Carlson
Modified: 2022-08-09 06:43 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2022-08-08 12:04:18 PDT
Reject getDisplayMedia prompt if user doesn't choose a window or screen, or if the system picker fails internally.
Comment 1 Eric Carlson 2022-08-08 12:04:40 PDT
rdar://98194903
Comment 2 Eric Carlson 2022-08-08 12:31:02 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3110
Comment 3 EWS 2022-08-09 06:43:40 PDT
Committed 253260@main (bbf09215e01b): <https://commits.webkit.org/253260@main>

Reviewed commits have been landed. Closing PR #3110 and removing active labels.