[macOS] Reject getDisplayMedia prompt if system picker times out https://bugs.webkit.org/show_bug.cgi?id=243679 <rdar://98194903>

Reviewed by Jer Noble.

Set a 60 second timeout when invoking the ScreenCaptureKit system picker, fail capture if
if it fires.

* Source/WebCore/platform/mediastream/mac/ScreenCaptureKitSharingSessionManager.h:
* Source/WebCore/platform/mediastream/mac/ScreenCaptureKitSharingSessionManager.mm:
(WebCore::ScreenCaptureKitSharingSessionManager::pickerCanceledForSession): Clear the
timer. Drive-by: remove the session from the pending list.
(WebCore::ScreenCaptureKitSharingSessionManager::sessionDidEnd): Add logging.
(WebCore::ScreenCaptureKitSharingSessionManager::sessionDidChangeContent): Clear the
timer. Add logging.
(WebCore::ScreenCaptureKitSharingSessionManager::promptForGetDisplayMedia): Set timer,
cancel session if it fires.
(WebCore::ScreenCaptureKitSharingSessionManager::takeSharingSessionForFilter): Add logging.

Canonical link: https://commits.webkit.org/253260@main